// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilteredResults Should match snapshot: has results, has items, filters and secondary message props 1`] = `
<div
  class="filtered-results"
>
  <div
    class="filtered-results__inner"
  >
    <div>
      <h4
        class="filtered-results__title"
      >
        <span>
          10 results found with 
          <strong>
            2 filters
          </strong>
           applied.
        </span>
         
        <span
          class="filtered-results__title-notice text-italic text-bold"
        >
          Click here
        </span>
      </h4>
    </div>
     
    <div
      class="filtered-results__content"
    >
      <div
        class="filtered-results__items"
      />
    </div>
  </div>
</div>
`;

exports[`FilteredResults Should match snapshot: has results, has only items and filters props 1`] = `
<div
  class="filtered-results"
>
  <div
    class="filtered-results__inner"
  >
    <div>
      <h4
        class="filtered-results__title"
      >
        <span>
          10 results found with 
          <strong>
            2 filters
          </strong>
           applied.
        </span>
         
        <!---->
      </h4>
    </div>
     
    <div
      class="filtered-results__content"
    >
      <div
        class="filtered-results__items"
      />
    </div>
  </div>
</div>
`;

exports[`FilteredResults Should match snapshot: no results 1`] = `
<div
  class="filtered-results"
>
  <div
    class="filtered-results__inner"
  >
    <div>
      <h4
        class="filtered-results__title"
      >
        <span>
          0 results found with 
          <strong>
            0 filters
          </strong>
           applied.
        </span>
         
        <!---->
      </h4>
    </div>
     
    <div
      class="filtered-results__content"
    >
      <div
        class="filtered-results__no-items"
      >
        <h3>
          No results
        </h3>
      </div>
    </div>
  </div>
</div>
`;
